<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:layout_marginBottom="175dp"
        android:text="@string/login_header"
        android:textSize="20sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/password_hint"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_field" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="547dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/rounded_rectangle3"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="SIGNUP"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="107dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="Sign Up Now to create an account!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/username_hint_field"
        android:hint="@string/username_hint_field"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="135dp"
        android:layout_height="148dp"
        android:layout_marginStart="137dp"
        android:layout_marginLeft="138dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="130dp"
        android:layout_marginBottom="498dp"
        android:background="#00FFFFFF"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app" />

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="149dp"
        android:background="@drawable/rounded_rectangle3"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="RESET PASSWORD"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

</androidx.constraintlayout.widget.ConstraintLayout>